--- a/index.html
+++ b/index.html
@@ -45,6 +45,8 @@
     <link rel="stylesheet" href="assets/css/responsive.css"/>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <meta name="facebook-domain-verification" content="6nxh7uu7xg0t6v3wj0130unvrqu165" />
+    
 </head>
 
 <body data-spy="scroll" data-target=".navbar-collapse">
